--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+h1{
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+    
+    position: relative;
+    left: 70px;
+    font-size: 50px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   
+}
